# smartphone-keyboard-remote

./: .gitignore  LICENSE  README.md  keyboard-test.html
.github/workflows/: publish-pwa.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: app.ts  router.ts
client/src/components/: BasicUsage.vue  Configure.vue  ConfigureLocalhost.vue  Index.vue  QRCodeDisplay.vue  QRCodeReader.vue
client/src/functions/: crypto.ts
client/src/stores/: main.ts
server/: Cargo.toml
server/src/: crypto.rs  env_storage.rs  error.rs  execution.rs  internal.rs  ip.rs  main.rs  routes.rs  static_files.rs
