[package]
name = "smartphone-keyboard-remote"
version = "0.0.0"
description = "Simple PWA that can be used as a remote keyboard for your PC in LAN"
authors = ["jonas-kell"]
license = "MIT"
repository = "https://github.com/jonas-kell/smartphone-keyboard-remote"
edition = "2021"

[dependencies]
enigo = "0.0.14"

actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-files = "0.6.6"

include_dir = "0.7.4"
