[package]
name = "smartphone-keyboard-remote"
version = "0.0.0"
description = "Simple PWA that can be used as a remote keyboard for your PC in LAN"
authors = ["jonas-kell"]
license = "MIT"
repository = "https://github.com/jonas-kell/smartphone-keyboard-remote"
edition = "2021"

[dependencies]
enigo = { version = "0.4.0", features = ["x11rb"]}

actix-web = "4.4"
actix-cors = "0.7.0"
tokio = { version = "1.31", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

include_dir = "0.7.4"
local-ip-address = "0.6.3"
mime_guess = "2.0"

dotenvy = "0.15.6"

sodiumoxide = "0.2"
base64 = "0.22.1"

open = "5.3.1"

once_cell = "1.21.3"